# rust-game-2

crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/farm-app/src/entity/: camera.rs  input_controller.rs  mod.rs
crates/farm-core/src/: ground.rs
crates/farm-renderer/: Cargo.toml
crates/farm-renderer/src/: lib.rs  meshing.rs  pushconstants.rs  uniform_buffer_object.rs
crates/game/: Cargo.toml
crates/game/src/: aabb.rs  camera.rs  main.rs  material.rs  node.rs  octree.rs  ray.rs
crates/linalg/: Cargo.toml
crates/linalg/src/: lib.rs
crates/linalg/src/ops/: mat2.rs  mat3.rs  mat4.rs  mod.rs  vec2.rs  vec2mat2.rs  vec3.rs  vec3mat3.rs  vec4.rs  vec4mat4.rs
crates/linalg/src/tests/: mod.rs
crates/linalg/src/types/: matrix2.rs  matrix3.rs  matrix4.rs  mod.rs  vector2.rs  vector3.rs  vector4.rs
crates/render-api/: Cargo.toml
crates/render-api/src/: lib.rs
crates/render-api/src/vk/: buffer.rs  command_buffer.rs  command_pool.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  entry.rs  fence.rs  framebuffer.rs  image.rs  image_memory_barrier.rs  image_view.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  pipeline.rs  pipeline_layout.rs  queue.rs  render_pass.rs  sampler.rs  semaphore.rs  (+3 more)
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/shader/: Cargo.toml  build.rs
crates/shader/src/: lib.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: aabb.rs  lib.rs  node.rs  octant.rs  octree.rs  tree.rs  world.rs
shaders/: rt.glsl
(+8 files in other folders)
